Bug 684622 - Print scaling and shrink to fit page width does not work from page 2. r=matspal